    last character of a word if invoked while point was on the word's
    next-to-last character.

e.  Fixed a bug that could cause incorrect filename quoting when
    case-insensitive completion was enabled and the word being completed
    contained backslashes quoting word break characters.

f.  Fixed a bug in redisplay triggered when the prompt string contains
    invisible characters.

3.  New Features in Bash

a.  printf builtin understands two new escape sequences:  \" and \?.

b.  `echo -e' understands two new escape sequences:  \" and \?.

c.  The GNU `gettext' package and libintl have been integrated; the shell's
    messages can be translated into different languages.

4.  New Features in Readline

a.  New application variable, rl_completion_quote_character, set to any
    quote character readline finds before it calls the application completion
    function.

b.  New application variable, rl_completion_suppress_quote, settable by an
    application completion function.  If set to non-zero, readline does not
    attempt to append a closing quote to a completed word.

c.  New application variable, rl_completion_found_quote, set to a non-zero
    value if readline determines that the word to be completed is quoted.
    Set before readline calls any application completion function.

------------------------------------------------------------------------------
This document details the changes between this version, bash-3.0-alpha,
and the previous version, bash-2.05b-release.

1.  Changes to Bash

a.  Fixes so that the shell will compile without some of the default options
    defined.

b.  Fixed an error message that did not pass enough arguments to printf.

c.  Fixed a bug that caused input redirection to a builtin inside a script
    being read from standard input to result in the rest of the already-
    read and buffered script to be discarded.

d.  Fixed a bug that caused subshell initialization to close the file