@@ -83,6 +83,11 @@ e.  Fixed a bug that could cause incorrect filename quoting when
 f.  Fixed a bug in redisplay triggered when the prompt string contains
     invisible characters.
 
+g.  Fixed some display (and other) bugs encountered in multibyte locales
+    when a non-ascii character was the last character on a line.
+
+h.  Fixed some display bugs caused by multibyte characters in prompt strings.
+
 3.  New Features in Bash
 
 a.  printf builtin understands two new escape sequences:  \" and \?.
